--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  FEATURE_FLAGS_DOC: "FEATURE_FLAGS.md"               # Adjust the path if needed
-  FEATURE_FLAG_FILE: "FeatureFlags.tsx"                # Adjust the path if needed
+  FEATURE_FLAGS_DOC: "FEATURE_FLAGS.md"
+  FEATURE_FLAG_FILE: "FeatureFlags.tsx"
 
 jobs:
   update-doc:
@@ -18,75 +18,72 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
       - name: Get Latest Release Branch
         id: get-latest-release
         run: |
           # Get the latest release branch matching "release/*"
           latest_release=$(git branch -r --sort=-committerdate | grep 'origin/release/' | head -n 1 | sed 's|origin/||')
-          echo "Latest release branch: $latest_release"
           echo "branch=$latest_release" >> $GITHUB_OUTPUT
 
-      - name: Read Feature Flags from Latest Release Branch
-        id: read-release-flags
+      - name: Extract Feature Flags from Latest Release Branch
+        id: extract-release-flags
         run: |
           git checkout ${{ steps.get-latest-release.outputs.branch }}
-          node readFeatureFlags.js
-        env:
-          FEATURE_FLAG_FILE: ${{ env.FEATURE_FLAG_FILE }}
-          GITHUB_OUTPUT: $GITHUB_OUTPUT
+          grep -oP 'is\w+Enabled:\s*\"[A-Z_]+\"' ${{ env.FEATURE_FLAG_FILE }} | sed 's/: /=/' > release_flags.txt
 
-      - name: Read Feature Flags from Main Branch
-        id: read-main-flags
+      - name: Extract Feature Flags from Main Branch
+        id: extract-main-flags
         run: |
           git checkout main
-          node readFeatureFlags.js
-        env:
-          FEATURE_FLAG_FILE: ${{ env.FEATURE_FLAG_FILE }}
-          GITHUB_OUTPUT: $GITHUB_OUTPUT
+          grep -oP 'is\w+Enabled:\s*\"[A-Z_]+\"' ${{ env.FEATURE_FLAG_FILE }} | sed 's/: /=/' > main_flags.txt
 
       - name: Generate Comparison Markdown
-        id: generate-markdown
         run: |
-          const releaseFlags = JSON.parse('${{ steps.read-release-flags.outputs.flags }}');
-          const mainFlags = JSON.parse('${{ steps.read-main-flags.outputs.flags }}');
-          const releaseBranch = '${{ steps.get-latest-release.outputs.branch }}';
+          # Read feature flags from extracted files
+          declare -A release_flags main_flags
+          
+          # Populate arrays with release branch flags
+          while IFS='=' read -r key value; do
+            release_flags["$key"]="$value"
+          done < release_flags.txt
 
-          let markdownContent = `# Feature Flags Documentation\n\n`;
-          markdownContent += `> **Comparison between \`main\` and \`${releaseBranch}\`**\n\n`;
-          markdownContent += '| Count | Key         | Release Value (`' + releaseBranch + '`) | Main Value   | Status           |\n';
-          markdownContent += '|-------|-------------|-------------------------|--------------|------------------|\n';
+          # Populate arrays with main branch flags
+          while IFS='=' read -r key value; do
+            main_flags["$key"]="$value"
+          done < main_flags.txt
 
-          let count = 1;
-          const allKeys = new Set([...Object.keys(releaseFlags), ...Object.keys(mainFlags)]);
+          # Begin Markdown content
+          echo "# Feature Flags Documentation" > ${{ env.FEATURE_FLAGS_DOC }}
+          echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "> **Comparison between \`main\` and \`${{ steps.get-latest-release.outputs.branch }}\`**" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "| Count | Key | Release Value (latest release) | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "|-------|-----|-------------------------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-          for (const key of allKeys) {
-            const releaseValue = releaseFlags[key] !== undefined ? releaseFlags[key] : 'N/A';
-            const mainValue = mainFlags[key] !== undefined ? mainFlags[key] : 'N/A';
+          # Comparison logic
+          count=1
+          for key in "${!main_flags[@]}" "${!release_flags[@]}"; do
+            if [[ -z "${seen[$key]}" ]]; then
+              seen[$key]=1
+              release_value="${release_flags[$key]:-N/A}"
+              main_value="${main_flags[$key]:-N/A}"
 
-            let status = 'Unchanged';
-            if (releaseValue === 'N/A') {
-              status = 'New 🔵';
-            } else if (mainValue === 'N/A') {
-              status = 'Removed 🔴';
-            } else if (releaseValue !== mainValue) {
-              status = 'Updated 🟡';
-            } else {
-              status = 'Unchanged ⚪';
-            }
+              # Determine the status
+              if [[ "$release_value" == "$main_value" ]]; then
+                status="Unchanged ⚪"
+              elif [[ "$release_value" == "N/A" ]]; then
+                status="New 🔵"
+              elif [[ "$main_value" == "N/A" ]]; then
+                status="Removed 🔴"
+              else
+                status="Updated 🟡"
+              fi
 
-            markdownContent += `| ${count}     | ${key} | \`${releaseValue}\`      | \`${mainValue}\`     | **${status}** |\n`;
-            count++;
-          }
-
-          const outputPath = '${{ env.FEATURE_FLAGS_DOC }}';
-          require('fs').writeFileSync(outputPath, markdownContent, { encoding: 'utf8' });
-        env:
-          NODE_ENV: 'production'
+              # Append to Markdown
+              echo "| $count | $key | \`$release_value\` | \`$main_value\` | **$status** |" >> ${{ env.FEATURE_FLAGS_DOC }}
+              ((count++))
+            fi
+          done
 
       - name: Commit and Push Changes
         run: |
