--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -23,31 +23,46 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Get Latest Release Branch
+      - name: List All Branches and Get Latest Release Branch
         id: get-latest-release
         run: |
+          echo "Listing all remote branches:"
+          git branch -r
+          
+          # Attempt to find the latest release branch
           latest_release=$(git branch -r --sort=-committerdate | grep 'origin/release/' | head -n 1 | sed 's|origin/||')
-          echo "branch=$latest_release" >> $GITHUB_OUTPUT
+          if [ -z "$latest_release" ]; then
+            echo "No release branch found matching 'release/*'"
+            echo "branch=" >> $GITHUB_OUTPUT
+          else
+            echo "Latest release branch found: $latest_release"
+            echo "branch=$latest_release" >> $GITHUB_OUTPUT
+          fi
 
-      - name: Extract Feature Flags from Latest Release Branch
+      - name: Extract Feature Flags from Latest Release Branch (if available)
         id: extract-release-flags
         run: |
-          git checkout ${{ steps.get-latest-release.outputs.branch }}
-          grep -oP 'is\w+Enabled:\s*\"[A-Z_]+\"' ${{ env.FEATURE_FLAG_FILE }} | sed 's/: /=/' > release_flags.txt
+          if [ -n "${{ steps.get-latest-release.outputs.branch }}" ]; then
+            git checkout ${{ steps.get-latest-release.outputs.branch }}
+            grep -oP 'is[A-Za-z0-9_]+Enabled:\s*\"[A-Z_]+\"' ${{ env.FEATURE_FLAG_FILE }} | sed 's/: /=/' > release_flags.txt
+          else
+            echo "No release branch available. Skipping release flag extraction."
+            touch release_flags.txt  # Create an empty file for consistency
+          fi
           echo "Release flags extracted:"
-          cat release_flags.txt
+          cat release_flags.txt || echo "No flags extracted from release branch"
 
       - name: Extract Feature Flags from Main Branch
         id: extract-main-flags
         run: |
           git checkout main
-          grep -oP 'is\w+Enabled:\s*\"[A-Z_]+\"' ${{ env.FEATURE_FLAG_FILE }} | sed 's/: /=/' > main_flags.txt
+          grep -oP 'is[A-Za-z0-9_]+Enabled:\s*\"[A-Z_]+\"' ${{ env.FEATURE_FLAG_FILE }} | sed 's/: /=/' > main_flags.txt
           echo "Main branch flags extracted:"
-          cat main_flags.txt
+          cat main_flags.txt || echo "No flags extracted from main branch"
 
       - name: Generate Comparison Markdown
         run: |
-          # Read feature flags from extracted files
+          # Initialize associative arrays for release and main flags
           declare -A release_flags main_flags
           
           # Populate arrays with release branch flags
@@ -60,10 +75,23 @@ jobs:
             main_flags["$key"]="$value"
           done < main_flags.txt
 
+          # Check if arrays are populated
+          echo "Release Flags Array:"
+          declare -p release_flags
+          echo "Main Flags Array:"
+          declare -p main_flags
+
           # Begin Markdown content
           echo "# Feature Flags Documentation" > ${{ env.FEATURE_FLAGS_DOC }}
           echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-          echo "> **Comparison between \`main\` and \`${{ steps.get-latest-release.outputs.branch }}\`**" >> ${{ env.FEATURE_FLAGS_DOC }}
+          
+          # Add branch information
+          release_branch="${{ steps.get-latest-release.outputs.branch }}"
+          if [ -n "$release_branch" ]; then
+            echo "> **Comparison between \`main\` and \`$release_branch\`**" >> ${{ env.FEATURE_FLAGS_DOC }}
+          else
+            echo "> **No release branch found; only main branch feature flags are displayed.**" >> ${{ env.FEATURE_FLAGS_DOC }}
+          fi
           echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
           echo "| Count | Key | Release Value (latest release) | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
           echo "|-------|-----|-------------------------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
@@ -93,7 +121,7 @@ jobs:
             fi
           done
 
-          # Display the content of FEATURE_FLAGS.md for debugging
+          # Display the generated FEATURE_FLAGS.md for debugging
           echo "Generated FEATURE_FLAGS.md content:"
           cat ${{ env.FEATURE_FLAGS_DOC }}
 
