--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all branches to ensure release branches are available
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
