--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -107,55 +107,111 @@ jobs:
             main_flags["$key"]="$value"
           done < main_flags.txt
 
-          # Check if arrays are populated
-          echo "Release Flags Array:"
-          declare -p release_flags
-          echo "Main Flags Array:"
-          declare -p main_flags
-
           # Begin Markdown content
           echo "# Feature Flags Documentation" > ${{ env.FEATURE_FLAGS_DOC }}
           echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-          
-          # Add branch information
+
           release_branch="${{ steps.get-latest-release.outputs.branch }}"
           if [ -n "$release_branch" ]; then
             echo "> **Comparison between \`main\` and \`$release_branch\`**" >> ${{ env.FEATURE_FLAGS_DOC }}
-            release_column="Release Value (\`$release_branch\`)"  # Dynamic column header with branch name
+            release_column="Release Value (\`$release_branch\`)"
           else
             echo "> **No release branch found; only main branch feature flags are displayed.**" >> ${{ env.FEATURE_FLAGS_DOC }}
-            release_column="Release Value (latest release)"  # Fallback text if no release branch
+            release_column="Release Value (latest release)"
           fi
           echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
-          echo "| Count | Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-          echo "|-------|-----|-------------------------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
 
-          # Concatenate all keys without deduplication
-          count=1
+          # Separate sections for New, Updated, Deleted flags
+          echo "## Summary of Changes" >> ${{ env.FEATURE_FLAGS_DOC }}
+
+          # Track changes in New, Updated, Deleted arrays
+          new_changes=()
+          updated_changes=()
+          deleted_changes=()
+
+          # Process keys in release_flags first
           for key in "${!release_flags[@]}"; do
             release_value="${release_flags[$key]}"
             main_value="${main_flags[$key]:-N/A}"
 
-            # Determine the status
-            if [[ "$release_value" == "$main_value" ]]; then
-              status="Unchanged ⚪"
-            else
+            if [[ "$main_value" == "N/A" ]]; then
+              # Key exists in release_flags but not in main_flags, so it's deleted
+              deleted_changes+=("| $key | \`$release_value\` | N/A | **Deleted 🔴** |")
+            elif [[ "$release_value" != "$main_value" ]]; then
+              # Key exists in both but values are different, so it's updated
+              updated_changes+=("| $key | \`$release_value\` | \`$main_value\` | **Updated 🟡** |")
+            fi
+          done
+
+          # Process remaining keys in main_flags that weren't in release_flags
+          for key in "${!main_flags[@]}"; do
+            if [[ -z "${release_flags[$key]}" ]]; then
+              main_value="${main_flags[$key]}"
+              # Key is new in main_flags, so it's added as New
+              new_changes+=("| $key | N/A | \`$main_value\` | **New 🔵** |")
+            fi
+          done
+
+          # Output Summary of Changes
+          if [ ${#new_changes[@]} -gt 0 ]; then
+            echo "### New Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            printf "%s\n" "${new_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+          fi
+
+          if [ ${#updated_changes[@]} -gt 0 ]; then
+            echo "### Updated Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            printf "%s\n" "${updated_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+          fi
+
+          if [ ${#deleted_changes[@]} -gt 0 ]; then
+            echo "### Deleted Flags" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            printf "%s\n" "${deleted_changes[@]}" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
+          fi
+
+          # Full Comparison Table
+          echo "## Full Feature Flags Comparison" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "| Count | Key | $release_column | Main Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+          echo "|-------|-----|-----------------|------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+
+          # Track processed keys to avoid duplicates in full table
+          declare -A seen_keys
+          count=1
+
+          # Full table with release_flags first
+          for key in "${!release_flags[@]}"; do
+            release_value="${release_flags[$key]}"
+            main_value="${main_flags[$key]:-N/A}"
+            status=""
+
+            if [[ "$main_value" == "N/A" ]]; then
+              status="Deleted 🔴"
+            elif [[ "$release_value" != "$main_value" ]]; then
               status="Updated 🟡"
+            else
+              status="Unchanged ⚪"
             fi
 
-            # Append to Markdown
             echo "| $count | $key | \`$release_value\` | \`$main_value\` | **$status** |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            seen_keys["$key"]=1
             ((count++))
           done
 
-          # Include main branch keys that weren't in the release branch
+          # Append remaining keys from main_flags
           for key in "${!main_flags[@]}"; do
-            if [[ -z "${release_flags[$key]}" ]]; then
+            if [[ -z "${seen_keys[$key]}" ]]; then
               release_value="N/A"
               main_value="${main_flags[$key]}"
-
-              # Mark as New if it only exists in main branch
               status="New 🔵"
+
               echo "| $count | $key | \`$release_value\` | \`$main_value\` | **$status** |" >> ${{ env.FEATURE_FLAGS_DOC }}
               ((count++))
             fi
@@ -164,6 +220,7 @@ jobs:
           # Display the generated FEATURE_FLAGS.md for debugging
           echo "Generated FEATURE_FLAGS.md content:"
           cat ${{ env.FEATURE_FLAGS_DOC }}
+
 
 
       - name: Cleanup Temporary Files
